--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
         debugMode = false;
         console.log( "debug:", debugMode );
-        console.log( "scc-version:", socketCluster.version );
-        console.log( "scc-clients:", socketCluster.clients );
+    //  console.log( "scc-version:", socketCluster.version );
+    //  console.log( "scc-clients:", socketCluster.clients );
 
     </script>
 
